--- a/templates/register.html.twig
+++ b/templates/register.html.twig
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rejestracja</title>
-</head>
-<body>
+{% include 'head.html.twig' %}
     <form action="" method="post">
         <label for="loginID">Login:</label><br>
         <input type="text" name="login" id="loginID"><br>
@@ -18,5 +10,4 @@
         <input type="text" name="lastName" id="lastNameID"><br>
         <input type="submit" value="Rejestruj">
     </form>
-</body>
-</html>
+{% include 'foot.html.twig' %}
