--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -5,5 +5,6 @@
         <label for="passwordID">Hasło:</label><br>
         <input type="password" name="password" id="passwordID"><br>
         <input type="submit" value="Zaloguj">
-    </form> 
+    </form>
+    {{message}} 
 {% include 'foot.html.twig' %}
