--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,5 +1,8 @@
-{% if authorized == true %}
-    Jesteś zalogowany
-{% endif %}
-
-{% include 'footer.html.twig' %}
+{% include 'header.html.twig' %}
+Strona główna <br>
+    {% if user is defined %}
+        Jesteś zalogowany jako: {{user.getName()}}
+        <a href="/loginform/logout/">Wyloguj</a>
+    {% endif %}
+   
+{% include 'footer.html.twig' %} 
