--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -1,4 +1,4 @@
-{% include 'head.html.twig' %}
+{% include 'header.html.twig' %}
     <form action="" method="post">
         <label for="loginID">Login:</label><br>
         <input type="text" name="login" id="loginID"><br>
@@ -6,5 +6,5 @@
         <input type="password" name="password" id="passwordID"><br>
         <input type="submit" value="Zaloguj">
     </form>
-    {{message}} 
-{% include 'foot.html.twig' %}
+    {{message}}
+{% include 'footer.html.twig' %} 
