--- a/templates/message.html.twig
+++ b/templates/message.html.twig
@@ -1,3 +1,3 @@
-{% include 'head.html.twig' %}
+{% include 'header.html.twig' %}
     {{ message }}
-{% include 'foot.html.twig' %}
+{% include 'footer.html.twig' %}
